-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
QO 2022-07-11
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/util/pcre.cpp:311: UNINIT_CTOR 122354 Class member declaration for "_errorPos".
/src/mongo/util/pcre.cpp:166: UNINIT_CTOR 122354 Non-static class member "_errorPos" is not initialized in this constructor nor in any functions that it calls.