SERVER-67249 Initialize _errorPos in RegexImpl constructor